[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kea_config"
dynamic = ["version"]
description = "Manage kea dhcp from simple conf file (gc)"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[tool.hatch.version]
path = "src/kea_config/__about__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]


