[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kea_config"
dynamic = ["version"]
description = "Manage kea dhcp from simple conf file (gc)"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/kea_config"]
include = [
    "src/kea_config",
]

[tool.hatch.version]
path = "src/kea_config/__about__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.13", "3.14", "3.15"]

[tool.mypy]
check_untyped_defs = true


