[build-system]
requires = ["uv_build>=0.9.21,<=1.0.0"]
build-backend = "uv_build"

[project]
name = "kea_config"
description = "Manage kea dhcp from simple conf file (gc)"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
requires-python = ">=3.13"
version = "5.2.1"
dependencies = []

[project.urls]
Documentation = "https://github.com/gene-git/kea_config/Docs"
Issues = "https://github.com/gene-git/kea_config/issues"
Source = "https://github.com/gene-git/kea_config"

[tool.uv.build-backend]
module-name = 'kea_config_mod'
module-root = "src"
source-include = [
    '/kea_config_mod',
    '/kea_config_mod/py.typed',
]
source-exclude = [
    ".pytest_cache",
    "__pycache__",
    ".mypy_cache",
]

[tool.mypy]
check_untyped_defs = true


